<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name" tools:keep="@string/app_name">Platform</string>
    <string name="notification_channel_name" translatable="false">Platform</string>
    <string name="notification_channel_description" translatable="false">Platform</string>
    <string name="app_name_ss">Octopus</string>
    <string name="content_description">Description</string>
    <string name="back_string">Please click BACK again to exit</string>
    <string name="select_lang">Select Language</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="no_thanks">No, thanks</string>
    <string name="update">Update</string>
    <string name="msg_failure">Something went wrong while doing the operations, please try again later.</string>
    <string name="title_new_version_available">New version available</string>
    <string name="msg_update_app">Please, update app to new version to continue.</string>
    <string name="msg_need_force_update">You need to update app to latest version.</string>
    <string name="msg_enter_mobile">Please enter your mobile number to get started!</string>
    <string name="msg_mobile_number_is_empty">Mobile Number is empty</string>
    <string name="msg_mobile_number_is_invalid">Not a valid mobile number</string>
    <string name="label_login">Get OTP</string>
    <string name="label_time">time</string>
    <string name="resend"> <u>Resend OTP</u></string>
    <string name="otp_timeout_text">Please wait</string>
    <string name="msg_otp_verification_timeout">Could not receive OTP, please try to resend OTP again.</string>
    <string name="msg_waiting_for_otp_text">Auto-read OTP is in progress, Please wait...</string>
    <string name="msg_verify_otp_text">Click on verify button to verify your mobile number.</string>
    <string name="msg_logout">On Logout, Offline-saved data will be lost. Do you still want to Logout?</string>
    <string name="msg_auth_fail">Server issue, please try again later.</string>
    <string name="profile">Profile</string>
    <string name="add_photo">Add Photo</string>
    <string name="registration_title">Registration</string>
    <string name="btn_submit">Submit</string>
    <string name="first_name">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date *</string>
    <string name="mobile_no">Mobile Number *</string>
    <string name="email_id">Email Id</string>
    <string name="address">Address</string>
    <string name="work_location">Work Location</string>
    <string name="gender">Gender *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="mandatory_organization">Select organization *</string>
    <string name="organization">Organization</string>
    <string name="mandatory_project">Select project *</string>
    <string name="project">Project</string>
    <string name="mandatory_role">Role *</string>
    <string name="role">Role</string>
    <string name="mandatory_state">State *</string>
    <string name="country">Country</string>
    <string name="state">State </string>
    <string name="mandatory_district">District *</string>
    <string name="district">District</string>
    <string name="mandatory_city">City *</string>
    <string name="city">City</string>
    <string name="mandatory_taluka">Taluka *</string>
    <string name="taluka">Taluka</string>
    <string name="mandatory_cluster">Cluster *</string>
    <string name="cluster">Cluster</string>
    <string name="mandatory_village">Village *</string>
    <string name="village">Village</string>
    <string name="mandatory_school">School Name *</string>
    <string name="school">School Name</string>
    <string name="profile_pic">Add profile picture</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_profile_pic">Update profile picture</string>
    <string name="update_data_string">Do you want to Update Data?</string>
    <string name="approve_profile">You are not approved yet. Please contact to your senior authority.</string>
    <string name="title_choose_picture">Choose Picture</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_camera">Camera</string>
    <string name="msg_enter_name">Please enter name</string>
    <string name="msg_enter_mobile_number">Please enter mobile number</string>
    <string name="msg_enter_valid_mobile_no">Please enter 10 digit mobile number</string>
    <string name="msg_enter_valid_email_id" tools:keep="@string/msg_enter_valid_email_id">Please enter valid email address</string>
    <string name="msg_select_project" tools:keep="@string/msg_select_project">Please select project</string>
    <string name="msg_select_gender">Please select gender</string>
    <string name="msg_select_role">Please select Role</string>
    <string name="msg_select_state">Please select State</string>
    <string name="msg_select_district">Please select District</string>
    <string name="msg_select_taluka">Please select Taluka</string>
    <string name="msg_select_cluster">Please select Cluster</string>
    <string name="msg_select_village">Please select Village</string>
    <string name="msg_big_image">Image size should not be more than 5MB</string>
    <string name="menu_home">Home</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_community">My Community</string>
    <string name="menu_forms">Forms</string>
    <string name="menu_teams">Approvals</string>
    <string name="menu_calendar">Planner</string>
    <string name="menu_assets">Assets</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_ho_support">HO Support</string>
    <string name="menu_notice_board">Notice Board</string>
    <string name="menu_account">Account</string>
    <string name="menu_leaves_attendance">Leaves and Attendance</string>
    <string name="menu_change_language">Change language</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_call_us">Call Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="app_version">App Version</string>
    <string name="locked">Locked</string>
    <string name="tab_dashboard">HOME</string>
    <string name="tab_connect">CONNECT</string>
    <string name="tab_stories">STORIES</string>
    <string name="programme_management">Programme\nManagement</string>
    <string name="planner">Planner</string>
    <string name="meetings">Meetings</string>
    <string name="team_management">Team Management</string>
    <string name="saved_forms_cat">Saved Forms</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="no_data_available">No data available</string>
    <string name="view_all_forms">View All Forms</string>
    <string name="view_all_approvals">view all approvals</string>
    <string name="view_all_reports">View All Reports</string>
    <string name="cat_pending">Pending</string>
    <string name="cat_approved">Approved</string>
    <string name="cat_rejected">Rejected</string>
    <string name="approvals">Approvals</string>
    <string name="who_working">"Who's Working"</string>
    <string name="team_user_approval">User Approval</string>
    <string name="no_notification_available">There are no notifications for you!</string>
    <string name="msg_something_went_wrong">Something went wrong</string>
    <string name="msg_error_in_photo_gallery">Problem in taking photo from gallery, please use camera to take photo.</string>
    <string name="msg_image_capture_not_support">"Whoops - your device doesn't support image capturing!"</string>
    <string name="msg_take_photo_error">App do not have permission to take a photo, please allow it.</string>
    <string name="default_select">--Select--</string>
    <string name="category_title">Category Title</string>
    <string name="forms">Forms</string>
    <string name="no_records_available">Data is not available!</string>
    <string name="verification_code">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="please_type_the_verification_code_n_sent_to">Please enter the OTP you received on your number \nsent to %1$s</string>
    <string name="reports">Reports</string>
    <string name="submitted_form_count">Total count of submitted forms : %1$s</string>
    <string name="msg_confirm">Are you sure you want to save this form?</string>
    <string name="msg_discard">Are you sure you want to discard this form?</string>
    <string name="form_saved_offline">You are offline, form is submitted offline.</string>
    <string name="form_submit_success">Form submitted successfully!</string>
    <string name="image_upload_success">Image uploaded successfully!</string>
    <string name="status_update_success">Status updated successfully!</string>
    <string name="new_forms">New</string>
    <string name="saved_forms">Saved</string>
    <string name="submitted_forms">Submitted</string>
    <string name="form_field_mandatory">%1$s%2$s</string>
    <string name="msg_no_pending_req">No data available.</string>
    <string name="msg_no_form_offline">This form is not available in offline. To use this form in offline, please use it once in network.</string>
    <string name="msg_form_duplicate_error">Duplicate entries are not allowed.</string>
    <string name="msg_slow_network">Network is slow, please try again</string>
    <string name="coming_soon">Coming Soon&#8230;</string>
    <string name="msg_no_network">Network not available, please try again later.</string>
    <string name="notifications">Notifications</string>
    <string name="msg_rejection_reason">Are you sure you want to reject this request?</string>
    <string name="msg_rejection_comment">Reason for rejection</string>
    <string name="msg_error_rejection_comment_needed">Rejection reason needed</string>
    <string name="form_count">%1$d Forms</string>
    <string name="frequently_used_forms">Frequently used forms</string>
    <string name="partial_form_added">Form Saved Successfully</string>
    <string name="form_deleted">Form deleted!</string>
    <string name="msg_delete_saved_form">Are you sure you want to delete this saved form?</string>
    <string name="requests">Requests</string>
    <string name="sync_completed">Sync Completed</string>
    <string name="sync_failed">Sync Failed</string>
    <string name="syncing_pending">Syncing Pending</string>
    <string name="sync_started">Sync Started</string>
    <string name="submitted_and_synced">Submitted &amp; Synced</string>
    <string name="submitted_forms_label">Submitted Forms</string>
    <string name="unexpected_error_occurred">Unexpected error occurred.</string>
    <string name="value_should_not_be_less_than">value should not be less than</string>
    <string name="value_should_not_be_greater_than">value should not be greater than</string>
    <string name="length_should_not_be_less_than">length should not be less than</string>
    <string name="length_should_not_be_greater_than">length should not be greater than</string>
    <string name="cant_be_empty">can\'t be empty</string>
    <string name="no_proper_format">not in proper format</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="edit">Edit</string>
    <string name="this_event_only">This eventTask only</string>
    <string name="all_events_in_series">All events in series</string>
</resources>