<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/edit"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_edit_this_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_my_events_active"
            android:drawablePadding="@dimen/dimen_10dp"
            android:layout_margin="@dimen/dimen_05dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_05dp"
            android:text="@string/this_event_only"/>
        <TextView
            android:id="@+id/tv_edit_all_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/all_events_active"
            android:drawablePadding="@dimen/dimen_10dp"
            android:layout_margin="@dimen/dimen_05dp"
            android:paddingTop="@dimen/dimen_05dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:text="@string/all_events_in_series"/>

    </LinearLayout>


</RelativeLayout>
