<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_70dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    tools:ignore="PrivateResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/form_image"
        android:layout_centerVertical="true"
        android:padding="@dimen/dimen_10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/form_title"
            style="@style/FormLabel.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/category_title"
            android:textColor="@color/light_black" />

        <TextView
            android:id="@+id/form_count"
            style="@style/FormLabel.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_05dp"
            android:text="@string/form_count"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/form_image"
        android:layout_width="@dimen/dimen_15dp"
        android:layout_height="@dimen/dimen_15dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:contentDescription="@string/content_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_right_arrow_grey"
        android:tint="@color/black" />
</RelativeLayout>
